# tensorfs

./: Cargo.toml  LICENSE
crates/api/: Cargo.toml
crates/api/src/: lib.rs  prefetch_service.rs
crates/api/tests/: prefetch.rs
crates/cas/: Cargo.toml
crates/cas/src/: cas.rs  fs.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  model_ref.rs  prefetch.rs
crates/cli/tests/: prefetch.rs
crates/core/: Cargo.toml
crates/core/src/: cas.rs  chunk.rs  error.rs  lib.rs  manifest.rs  manifest_builder.rs  resolver.rs  safetensors.rs  source.rs  types.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: hf.rs  lib.rs  model_importert.rs  remote_source.rs
crates/fetch/tests/: huggingface.rs  model_importer.rs
crates/fuse/: Cargo.toml
crates/fuse/src/: error.rs  lib.rs  tensorfs.rs
crates/read/: Cargo.toml
