[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core", package = "tensorfs"}
fetch = { path = "../fetch" }
tracing = "0.1"

[dev-dependencies]
bytes = "1"
cas = { path = "../cas" }
tempfile = "3"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
url = "2"
