[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
api = { path = "../api" }
cas = { path = "../cas" }
clap = { version = "4.6.1", features = ["derive"] }
core = { path = "../core", package = "tensorfs"}
fetch = { path = "../fetch" }

reqwest = { version="0.13.2", features = ["json"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
