[package]
name = "fetch"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bytes = "1.11.1"
reqwest = { version="0.13.2", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tensorfs = { path = "../core" }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
